# axelar-cgp-sui

./: .coverage.extended.info  .coverage.info  .env.example  .eslintrc  .gitignore  .mocharc.yaml  .npmignore  .prettierrc  CHANGELOG.md  Cargo.toml  INTEGRATION.md  README.md  RELEASE.md  UPGRADE.md  package-lock.json  package.json  test.move  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.web.json  version.json
.changeset/: afraid-comics-relax.md  blue-queens-bow.md  brown-worms-prove.md  calm-tables-beam.md  calm-years-attack.md  chatty-mails-smell.md  chilled-apes-lay.md  curly-suns-explain.md  cyan-foxes-push.md  dull-humans-fold.md  easy-llamas-eat.md  eight-candles-rest.md  eighty-bobcats-beg.md  eighty-eggs-cross.md  eleven-bugs-add.md  eleven-hotels-tease.md  eleven-knives-worry.md  empty-jokes-agree.md  fair-dots-explode.md  fast-numbers-battle.md  few-penguins-sort.md  five-houses-perform.md  flat-mangos-work.md  forty-ghosts-tie.md  forty-spies-dance.md  four-cows-shout.md  friendly-chefs-itch.md  friendly-starfishes-rush.md  funny-coins-act.md  fuzzy-mayflies-know.md  giant-pans-impress.md  gold-worms-whisper.md  good-bulldogs-drive.md  good-clouds-arrive.md  healthy-cycles-join.md  heavy-yaks-doubt.md  hip-ears-act.md  honest-baboons-act.md  honest-jobs-live.md  honest-yaks-prove.md  (+60 more)
.github/: CODEOWNERS  test.yaml
.github/workflows/: codecov.yaml  conventional-commits.yaml  create-release-pr.yaml  limits.yaml  lint.yaml  pre-release.yaml  publish-to-npm.yaml  release-snapshot.yaml  release.yaml  test-js.yaml  test-move.yaml  test.yaml  upload-docs.yaml  verify-build.yaml
docs/: release.md
relayer/: Cargo.toml
relayer/src/: handlers.rs  listener.rs  relayer.rs  types.rs
scripts/: bcs.js  clear-move-tomls.js  coverage.sh  docs.sh  flatten.js  gateway.js  governance.js  index.js  interchain_token.move  limits.js  publish-all.js  publish-interchain-token.js  publish-package.js  run.sh  test-get-unregistered-token.js  test-receive-call.js  test-send-call.js  test-trading.js  test-transfer-operatorship.js  test.js  testReceiveCall.js  testSendCall.js  transfer-genesis-operatorship.js  tx-builder.js  upgradable.js  utils.js  verify-web-build.js
src/: bcs.ts  execute.ts  handlers.rs  index.ts  node-utils.ts  relayer.rs  tx-builder.ts  types.rs  types.ts  utils.ts
test/: axelar-gateway.js  bcs.js  its.js  move-functions.js  package.js  packages.js  squid.js  test.js  testutils.js  utils.js  utils.test.js
(+339 files in other folders)
